src/test/deca/syntax/invalid/synt/missingOPar.deca
// @expected_output deca:3:9:
{
    print"yo");
}
